# trading_with_shoonya

./: .gitignore  README.md  api_helper.py  backtest.py  client_shoonya.py  const.py  data_store.py  event_engine.py  requirements.txt  shoonya.py  shoonya_event_driven.py  utils.py
rust/: Cargo.toml
rust/common/: Cargo.toml  config.json
rust/common/src/: utils.rs
rust/scrip_master/: Cargo.toml
rust/scrip_master/src/: lib.rs
rust/shoonya/: Cargo.toml
rust/shoonya/src/: auth.rs  lib.rs  markets.rs  orders.rs  transaction.rs  urls.rs  websocket.rs
rust/src/: logger.rs  main.rs  markets.rs  order_manager.rs  orders.rs  scrips.rs
transactional/: bot_server.py  docker-compose.yml  expiry_runner.sh  index.html  log_parser.py  order_manager.py  requirements.txt  shoonya_transaction.py  transaction_manager.py  transaction_manager_postgres.py
transactional/templates/: index.html  logStream.html
