[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
flexi_logger = {version = "0.27.3" }
log = "0.4.20"
scrip_master = {path = "scrip_master"}
shoonya = { path = "shoonya"}
common = { path = "common"}
serde_json = "1.0.108"
colored = "2.1.0"
clap = { version = "4.4.12", features = ["derive"] }
tokio = "1.37.0"
