[package]
name = "scrip_master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
zip = "0.6.6"
common = { path = "../common"}