[package]
name = "shoonya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
chrono = "0.4.31"
redis = "0.25.2"
serde_yaml = "0.9.29"
totp-rs = "5.4.0"
sha2 = "0.10.8"
log = "0.4.20"
common = { path = "../common"}
tokio = "1.36.0"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
